--- a/ImageToText/Info.plist
+++ b/ImageToText/Info.plist
@@ -70,5 +70,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>Allow Camera for Scan Document</string>
 </dict>
 </plist>
